--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Hola Mundo</h1>
     <h2>Soy un subtitulo</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing eli.</p>
   </body>
 </html>
