--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git 🚀</title>
   </head>
   <body>
-    <h1>Hola Mundo</h1>
+    <h1>Hola</h1>
     <h2>Soy un subtitulo</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing eli.</p>
     <h2>Otra Rama Navbar</h2>
