--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hola</h1>
+    <h2>Hola</h2>
     <h2>Soy un subtitulo</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing eli.</p>
     <h2>Otra Rama Navbar</h2>
